--- a/app/src/main/res/layout/favorite_list.xml
+++ b/app/src/main/res/layout/favorite_list.xml
@@ -27,8 +27,10 @@
                 android:textAlignment="center"
                 android:gravity="center_vertical"
                 android:id="@+id/tv_nome"
+                android:hint="TITLE"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
             <TextView
                 android:textAlignment="center"
                 android:gravity="center_vertical"
