--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
@@ -10,79 +11,110 @@
         <ImageView
             android:src="@drawable/ic_launcher_background"
             android:id="@+id/iv_image"
+            android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:layout_margin="5dp"
             android:layout_width="100dp"
             android:layout_height="100dp" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:orientation="vertical">
+
             <TextView
-                android:textAlignment="center"
-                android:gravity="center_vertical"
                 android:id="@+id/tv_nome"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textAlignment="center"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:hint="TITLE"
+                android:textAlignment="center"
+                android:textStyle="bold"/>
+
+            <TextView
                 android:id="@+id/tv_subtitulo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textAlignment="center"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:hint="SUBTITLE"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>/>
+
+            <TextView
                 android:id="@+id/tv_data"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textAlignment="center"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:hint="DATA PUBLICAÇÃO"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>/>
+
+            <TextView
                 android:id="@+id/tv_autor"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textAlignment="center"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:hint="AUTORES"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>/>
+
+            <TextView
                 android:id="@+id/tv_descricao"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-
-                android:textAlignment="center"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:hint="DESCRIÇÃO"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>/>
+
+            <TextView
                 android:id="@+id/tv_preco"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textAlignment="center"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:hint="PREÇO"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>/>
+
+            <TextView
                 android:id="@+id/tv_rating"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textAlignment="center"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:hint="RATING"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>/>
+
+            <TextView
                 android:id="@+id/tv_paginas"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/btn_adcfavorito"
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorPrimary"
-                android:text="Adicionar aos Favoritos!" />
-            <Button
-                android:id="@+id/btn_comprar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Comprar"
-                android:backgroundTint="@color/colorPrimary"/>
-
+                android:gravity="center_vertical"
+                android:hint="PÁGINAS"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"/>/>
 
         </LinearLayout>
+        <Button
+            android:id="@+id/btn_adcfavorito"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/back"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="Adicionar aos Favoritos!"
+            android:layout_marginTop="10dp"/>/>
+
+        <Button
+            android:id="@+id/btn_comprar"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/back"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="Comprar"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 
