--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -17,7 +17,8 @@
     <EditText
         android:id="@+id/et_pesquisa"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@drawable/back"/>
     <Button
         android:id="@+id/btn_pesquisar"
         android:text="pesquisar"
